# JuiceShop

./: .gitignore  README.md  main.py  pyproject.toml
General/Front-End/: chunk-24EZLZ4I.js  chunk-24EZLZ4I.md  chunk-4MIYPPGW.js  chunk-4MIYPPGW.md  chunk-LHKS7QUN.js  chunk-LHKS7QUN.md  chunk-T3PSKZ45.js  chunk-T3PSKZ45.md  chunk-TWZW5B45.js  chunk-TWZW5B45.md  confetti-5NW67UGY.md  hacking-instructor-OYUKCDGG.js  hacking-instructor-OYUKCDGG.md  index.html  main.js  main.md  polyfills.js  polyfills.md  scripts.js  scripts.md
Setup/: SETUP.md
Walkthrough/1-Star/: README.md
Walkthrough/1-Star/Bonus Payload/: README.md
Walkthrough/1-Star/Bully Chatbot/: README.md
Walkthrough/1-Star/Confidential Document/: README.md
Walkthrough/1-Star/DOM XSS/: README.md
Walkthrough/1-Star/Error Handling/: README.md
Walkthrough/1-Star/Exposed Metrics/: README.md
Walkthrough/1-Star/Mass Dispel/: README.md
Walkthrough/1-Star/Missing Encoding/: README.md
Walkthrough/1-Star/Outdated Allowlist/: README.md
Walkthrough/1-Star/Privacy Policy/: README.md
Walkthrough/1-Star/Repetitive Registration/: README.md
Walkthrough/1-Star/Score Board/: README.md
Walkthrough/1-Star/Web3 Sandbox/: README.md
Walkthrough/1-Star/Zero Stars/: README.md
Walkthrough/2-Star/: README.md
Walkthrough/2-Star/AI Debugging/: REAME.md
Walkthrough/2-Star/Admin Section/: README.md
Walkthrough/2-Star/Deprecated Interface/: README.md  test.xml
Walkthrough/2-Star/Empty User Registration/: README.md
Walkthrough/3-Star/: README.md
Walkthrough/4-Star/: LogInBjoern.md  Typo-Squatting.md
(+39 files in other folders)
